--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ deploy:
   provider: releases # pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  api_key: $GITHUB_TOKEN
   keep_history: true
   on:
     branch: master
