--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,7 @@ deploy:
   keep_history: true
   file: "target/family-notes-base-0.0.1-SNAPSHOT.jar"
   on:
-    branch: master
+    all_branches: true
+    tags: true
+          # branch: master
+
