--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: java
 
 deploy:
-  provider: pages
+  provider: releases
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  #api_key: $GITHUB_TOKEN
+  # github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  api_key: $GITHUB_TOKEN
   keep_history: true
-  #file: "target/family-notes-base-0.0.1-SNAPSHOT.jar"
-  #local_dir: "target"
+  file: "target/family-notes-base-0.0.1-SNAPSHOT.jar"
+  # local_dir: "target"
   on:
-    #all_branches: true
-    #tags: true
-    branch: master
+    all_branches: true
+    tags: true
+    # branch: master
 
