--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ deploy:
   keep_history: true
   file: "target/family-notes-base-0.0.1-SNAPSHOT.jar"
   # local_dir: "target"
-  on:
-    all_branches: true
-    tags: false
+  draft: true
+  #  on:
+  # all_branches: true
+  # tags: false
 
     # branch: master
 
