--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ deploy:
   file: "target/family-notes-base-0.0.1-SNAPSHOT.jar"
   # local_dir: "target"
   draft: true
+  overwrite: true
   on:
     all_branches: true
     tags: false
